
* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch



termco 0.5.0 -
----------------------------------------------------------------

BUG FIXES

NEW FEATURES

MINOR FEATURES

IMPROVEMENTS

CHANGES



termco 0.4.0 - 0.4.3
----------------------------------------------------------------

NEW FEATURES

* `term_cols` & `group_cols` added to quickly grab just term or grouping
  variable columns.

* `as_dtm` & `as_tdm` added to convert a `term_count` object into a
  `tm::DocumentTermMatrix` or `tm::TermDocumentMatrix` object.

* `update_names` added to allow for safe renaming of a `term_count` object's
  columns while also updating its attributes as well.

IMPROVEMENTS

* `classify` picks up a new default `ties.method` type of `"probabilities"`.
  This used the probability distribution from all tags assigned to randomly
  break ties based on that distribution.

* `term_count` gets an auto-collapse feature for hierarchical `term.list`s with
  duplicate names.  A message is printed telling the user this is happening.  To
  get the hierarchical coverage use `attributes(x2)[['pre_collapse_coverage']]`.

* `accuracy` now uses standard model evaluation measures of macro/micro averaged
  accuracy, precision, and recall as outlined by Dan Jurafsky & Chris Manning.
  See https://www.youtube.com/watch?v=OwwdYHWRB5E&index=31&list=PL6397E4B26D00A269
  for details on the methods.

CHANGES

* `plot.tag_co_occurrence` uses a bubble-dotplot for the right hand graph rather
  than the older bar plot.  This allows for tag size to be displayed in addition
  to average number of other tags to determine if the tag co-occurrence is a
  meaningful number of tags to give additional attention to.  Use `tag = TRUE`
  for the old behavior.

* `accuracy` was renamed to `evaluate` to be more informative as well as a verb.


